added bootstrap icon files + added category form add/remove field buttons

--- a/views/index.jade
+++ b/views/index.jade
@@ -25,10 +25,7 @@ html(lang="en")
 				label
 					| Label
 					input.name(name='label',value='')
-				label
-					| Field	
-					input.additionalField(value='')
-				button.btn Create category
+				button.btn.btn-success.submit Create category
 		#lossModal.modal.hide.fade
 			.modal-header
 				a.close(data-dismiss='modal') x
