changed the home made field adder to tagit library

--- a/views/categories.jade
+++ b/views/categories.jade
@@ -5,5 +5,8 @@ block mainContent
 		h1 Create a category
 		label
 			| Label
-			input.name(name='label',value='')
+			input(name='label')
+		label
+			| Fields
+			ul.fields
 		button.btn.btn-success.submit Create category
