--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -4,3 +4,4 @@ head
 	link(rel='stylesheet',href='static/style/bootstrap.min.css',media='screen')
 	link(rel='stylesheet',href='static/style/bootstrap-responsive.min.css',media='screen')
 	link(rel='stylesheet',href='static/style/bootstrap/jquery-ui-1.8.16.custom.css',media='screen')
+	link(rel='stylesheet',href='static/style/jquery.tagit.css',media='screen')
