--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,4 @@ html(lang="en")
 				p.message
 			.modal-footer
 				a.btn.btn-primary(data-dismiss='modal') OK :)
-		script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
-		script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js')
-		script(src='static/script/bootstrap.min.js')
-		script(src='static/script/scripts.js')
+		include includes/scripts
