--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -1,5 +1,6 @@
 head
 	title Index
+	meta(name='viewport', content='width=device-width, initial-scale=1.0')
 	link(rel='stylesheet',href='static/style/style.css',media='screen')
 	link(rel='stylesheet',href='static/style/bootstrap.min.css',media='screen')
 	link(rel='stylesheet',href='static/style/bootstrap-responsive.min.css',media='screen')
