--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -13,7 +13,7 @@
 							li
 								a(href='/categories') Categories
 							li
-								a(href='/createUser') Create User
+								a(href='/user') Create User
 						- if (user.role == "admin" || user.role == "volunteer")
 							li
 								a(href='/loss') Lost items
