few labels corrected, started user edition form

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block mainContent
-	h1 Welcome to Lost and Found !
+	h1 Welcome to Lost&Found !
 	p 
 		| Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		| tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
