tmp modifications perros

--- a/views/user.jade
+++ b/views/user.jade
@@ -16,29 +16,34 @@ block mainContent
 					each user in users
 						li 
 							a #{user.firstName + ' ' + user.lastName}
+							span= user.email
+							form(action='/api/user/#{user.email}', method='post')
+								input(type='hidden', name='_method','value=delete')
+								button.btn.btn-danger(type='submit') X
+
 
 				.span4
-					form(action='/user', method='get')
-					input(type="hidden",value="")
-					label Role
-						select(name='user[role]')
-							option volunteer
-							option admin
-							option lambda
-					label First name
-						input(name='user[firstName]')
-					label Last name
-						input(name='user[lastName]')
-					label Email
-						input(name='user[email]', type='email')
-					label Password
-						input(name='user[password]', type='password')
-					label Address
-						input(name='user[address]')
-					label Phone number
-						input(name='user[phone]')
-					a.btn Cancel
-					button.btn.btn-success(type="submit") Save
+					form(action='api/user/admin@admin.fr', method='post')
+						input(type="hidden",name='_method', value="put")
+						//label Role
+						//	select(name='user[role]')
+						//		option volunteer
+						//		option admin
+						//		option lambda
+						label First name
+							input(name='user[firstName]')
+						label Last name
+							input(name='user[lastName]')
+						//label Email
+						//	input(name='user[email]', type='email')
+						//label Password
+						//	input(name='user[password]', type='password')
+						//label Address
+						//	input(name='user[address]')
+						//label Phone number
+						//	input(name='user[phone]')
+						//a.btn Cancel
+						button.btn.btn-success(type="submit") Save
 		- else
 			.alert.alert-info No user ? I think not Something wrong happened... :(
 		
