--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,3 +14,4 @@ html(lang="en")
 			.modal-footer
 				a.btn.btn-primary(data-dismiss='modal') OK :)
 		include includes/scripts
+		block pageScript
